--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Antools: Analisys tools
+# Antools: Analysis tools
 
 <!-- badges: start -->
 <!-- badges: end -->
